fixed bugs and alignment

--- a/src/components/assets/css/Contact.css
+++ b/src/components/assets/css/Contact.css
@@ -1,161 +1,165 @@
-.contact_container{
-    width: 100%;
-    height: 15rem;
- background-color: #121212;
-    background-size: cover;
+.contact_container {
+  width: 100%;
+  height: 15rem;
+  background-color: #121212;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+  font-family: gilory;
+  text-align: center;
+  color: white;
+}
+.contact_container h1 {
+  font-size: 30px;
+}
+/* .contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
+.contact_container p {
+  font-size: 15px;
+}
+.box_container {
+  background-color: black;
+  width: 100%;
+  height: 15rem;
+  display: flex;
+  justify-content: space-evenly;
+  font-family: gilory;
+  /* justify-content: center; */
+  align-items: center;
+}
+.box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  position: relative;
+  top: -60px;
+  width: 18rem;
+  height: 15rem;
+  background-color: white;
+  box-shadow: 1px 25px 20px -20px rgba(255, 255, 255, 0.499);
+  margin: 20px;
+}
+.contact_me {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.contact_me i {
+  margin-top: 20px;
+  font-size: 20px;
+}
+.contact_me span {
+  font-size: 25px;
+  -webkit-text-stroke: 1px hsl(66.88deg 62.06% 50.39%);
+}
+.contact_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 10rem;
+}
+.box_content i {
+  font-size: 30px;
+  margin-left: 15px;
+  margin-right: 10px;
+  color: black;
+}
+.box_content {
+  display: flex;
+
+  text-align: center;
+  margin: 4px;
+}
+.box_content span {
+  font-size: 20px;
+}
+.access {
+  text-align: center;
+  margin: 20px;
+  margin-bottom: 5px;
+  -webkit-text-stroke: 0.7px hsl(66.88deg 62.06% 50.39%);
+  margin: 5px;
+}
+.button {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+}
+.pa {
+  text-align: center;
+  color: rgb(0, 0, 0);
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+@media screen and (max-width: 600px) {
+  .box_container {
+    flex-direction: column;
+    height: auto;
     justify-content: center;
     align-items: center;
-    align-content: center;
-    display: flex;
-    flex-direction: column;
-    font-family: gilory;
-    text-align: center;
-    color: white;
+  }
+  .box {
+    margin: 20px;
+  }
 }
-.contact_container h1{
-    font-size: 30px;
-    
+.lightss {
+  background-color: black;
+  color: white;
 }
-.contact_container p{
-    font-size: 15px;
+.lightss i {
+  color: white;
 }
-.box_container{
-    background-color: black;
-    width: 100%;
-    height: 15rem;
-    display: flex;
-    justify-content: space-evenly;
-    font-family: gilory;
+.lightss p {
+  color: white;
 }
-.box{
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    position: relative;
-    top: -60px;
-    width: 18rem;
-    height: 15rem;
-    background-color: white;
-    box-shadow: 1px 25px 20px -20px rgba(255, 255, 255, 0.499);
-    
+.lightsss {
+  color: black;
+  background-color: white;
+  border-top: 1px solid black;
 }
-.contact_me{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
+.lightssss {
+  background-color: grey;
 }
-.contact_me i{
-    margin-top: 20px;
-    font-size: 20px;
-}
-.contact_me span{
-    font-size: 25px;
-    -webkit-text-stroke: 1px hsl(66.88deg 62.06% 50.39%);
-}
-.contact_content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 10rem;
-    
-}
-.box_content i{
-    font-size: 30px;
-    margin-left: 15px;
-    margin-right: 10px;
-    color:black;
-}
-.box_content{
-    display: flex;
-   
-    text-align: center;
-    margin: 4px;
+.copy {
+  display: flex;
+  color: white;
+  background-color: black;
+  align-items: center;
+  align-content: center;
 
+  font-family: gilory;
+  height: 3rem;
+  border-top: 0.1px solid white;
+  justify-content: center;
+  font-size: 15px;
 }
-.box_content span{
-    font-size: 20px;   
+.copy li {
+  text-decoration: none;
+  list-style-type: none;
+  cursor: pointer;
+  padding: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-.access{
-
-    text-align: center;
-    margin:20px;
-    margin-bottom: 5px;
-    -webkit-text-stroke: 0.7px hsl(66.88deg 62.06% 50.39%);
-    margin: 5px;
-  
+.copy li a {
+  color: inherit;
 }
-.button{
-    margin: 10px;
-    display: flex;
-    justify-content: center;
+.copy :hover {
+  font-size: 17px;
 }
-.pa{
-    text-align: center;
-    color: rgb(0, 0, 0);
-    margin-bottom: 5px;
-    font-size: 18px;
-}
-@media screen and (max-width: 600px){
-    .box_container{
-        flex-direction: column;
-        height: auto;
-        
-    }
-    .box{
-        margin-top: 20px;
-        margin-left: 55px;
-       
-    }
-}
-.lightss{
-    background-color: black;
-    color: white;
-}
-.lightss i{
-    color: white;
-}
-.lightss p{
-    color: white;
-}
-.lightsss{
-    color:black;
-    background-color: white;
-    border-top: 1px solid black;
-}
-.lightssss{
-    background-color:grey;
-}
-.copy{
-    
-    display: flex;
-    color: white;
-    background-color: black;
-    align-items: center;
-    align-content: center;
-  
-    font-family: gilory;
-    height: 3rem;
-    border-top: 0.1px solid   white;
-    justify-content: center;
-    font-size: 15px;
-}
-.copy li{
-    text-decoration: none;
-    list-style-type: none;
-    cursor: pointer;
-    padding: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-   
-}
-.copy li a{
-    color: inherit;
-}
-.copy  :hover{
-    font-size: 17px ;
-}
-.y{
-    border-top:  0.1pc solid black;
-    color: black;
-    background-color: gray;
+.y {
+  border-top: 0.1pc solid black;
+  color: black;
+  background-color: gray;
 }
